[package]
name = "whiteboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
mongodb = { version = "3.2.1" }
serde_json = "=1.0.140"
redis = { version = "0.29.1", features = ["tokio-comp"] }