[package]
name = "whiteboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws", "macros"] }
axum-extra = {version = "0.10.0", features = ["typed-header"] }
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
mongodb = { version = "3.2.1" }
serde_json = "=1.0.140"
redis = { version = "0.29.1", features = ["tokio-comp"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
chrono = {version = "0.4.40", features = ["serde"]}
pbkdf2 = {version = "0.12", features = ["simple"]}
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
base64 = "0.22.1"
subtle = "2.5" 
dotenv = "0.15.0"
jsonwebtoken = "9.3"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
http = "1.3.1"

[dev-dependencies]
env_logger = "0.10"
log = "0.4"
